melhorias gerais, padronizações e logs
