# src/controllers/cliente.controller.js
@@ -1,24 +1,37 @@
 const { ClientesRepository, CidadesRepository } = require('../repositories');
 const { Cliente } = require('../models/cliente.model');
+const formatters = require('../utils/formatters');
 const { Sexo } = require('../enums/sexo.enum');
 
 const { ObjectId } = require('mongodb');
 const { DateTime } = require('luxon');
 
-const clientController = require('express').Router();
-
 const clienteRepository = new ClientesRepository();
 const cidadeRepository = new CidadesRepository();
 
-clientController.post('/cliente/cadastrar', (req, res) => registerCliente(req, res));
+const clientController = require('express').Router();
+
+clientController.post('/cliente/cadastrar', (req, res) => {
+  const nomeCompleto = req.body.nomeCompleto;
+  const sexo = req.body.sexo;
+  const dataNascimento = req.body.dataNascimento;
+  const cidade = req.body.cidade;
+  const estado = req.body.estado;
+
+  if (nomeCompleto && sexo && dataNascimento && cidade && estado) {
+    return registerCliente(req, res);
+  }
+  return res.status(404).send({ errorMessage: 'Falha ao cadastrar o cliente. O body da requisição está incompleto.' });
+});
 
 clientController.get('/cliente', (req, res, next) => {
   const nome = req.query.nome;
-  const id = req.query.id;
-  if (nome?.match(/([a-z_A-ZÀ-ž]{1,200}|[%\w{2}]{1,200}$)/)) {
+  if (nome) {
     return getClienteByNomeCompleto(req, res);
   }
-  if (id?.match(/([\w]{24}$)/)) {
+
+  const id = req.query.id;
+  if (id) {
     return getClienteById(req, res);
   }
   next();
@@ -26,7 +39,7 @@ clientController.get('/cliente', (req, res, next) => {
 
 clientController.delete('/cliente', (req, res, next) => {
   const id = req.query.id;
-  if (id?.match(/([\w]{24}$)/)) {
+  if (id) {
     return removeCliente(req, res);
   }
   next();
@@ -34,50 +47,59 @@ clientController.delete('/cliente', (req, res, next) => {
 
 clientController.put('/cliente', (req, res, next) => {
   const id = req.query.id;
-  if (id?.match(/([\w]{24}$)/) && req.query?.novo_nome_completo?.match(/([a-z_A-ZÀ-ž]{1,200}|[%\w{2}]{1,200}$)/)) {
+  const novo_nome_completo = req.query.novo_nome_completo;
+  if (id && novo_nome_completo) {
     return renameCliente(req, res);
   }
   next();
 });
 
 async function registerCliente(req, res) {
-  const cidade = req.body.cidade;
-  const estado = req.body.estado;
+  try {
+    const cidade = formatters.validatedCidadeNome(req.body.cidade);
+    const estado = formatters.validatedEstado(req.body.estado);
 
-  const cidadeDoc = await cidadeRepository.findOne({
-    nome: { $regex: new RegExp(cidade, 'i') },
-    estado: { $regex: new RegExp(estado, 'i') }
-  });
-  if (!cidadeDoc) {
-    res.status(404).send({ message:`Falha ao cadastrar o cliente. Motivo: Cidade não encontrada.
+    if (!cidade) { return res.send(400).send("Falha ao cadastrar a cidade. O campo 'cidade' não é válido.") }
+    if (!estado) { return res.send(400).send("Falha ao cadastrar a cidade. O campo 'estado' não é válido.") }
+
+    const cidadeDoc = await cidadeRepository.findOne({
+      nome: { $regex: new RegExp(cidade, 'i') },
+      estado: { $regex: new RegExp(estado, 'i') }
+    });
+    if (!cidadeDoc) {
+      return res.status(404).send({
+        message: `Falha ao cadastrar o cliente. Motivo: Cidade não encontrada.
         Possíveis causas: 
         1. Erro de ortografia. Verifique se o nome da cidade e a sigla do estado estão corretas.
-        2. Cidade ${cidade} não cadastrada no estado ${estado}.` });
-    return;
-  }
+        2. Cidade ${cidade} não cadastrada no estado ${estado}.`
+      });
+    }
 
-  const nomeCompleto = req.body.nomeCompleto;
-  const sexo = req.body.sexo;
-  const dataNascimento = req.body.dataNascimento;
+    const nomeCompleto = formatters.validatedClienteNome(req.body.nomeCompleto);
+    const sexo = formatters.validatedSexo(req.body.sexo);
+    const dataNascimento = formatters.validatedDataNascimento(req.body.dataNascimento);
 
-  const entity = new Cliente();
-  entity.nomeCompleto = nomeCompleto;
-  entity.sexo = Sexo[sexo];
-  entity.setDataNascimento(DateTime.fromFormat(dataNascimento, 'dd/LL/yyyy').toJSDate());
-  entity.cidade = cidadeDoc._id;
+    if (!nomeCompleto) { return res.send(400).send("Falha ao cadastrar a cidade. O campo 'nomeCompleto' não é válido.") }
+    if (!sexo) { return res.send(400).send("Falha ao cadastrar a cidade. O campo 'sexo' não é válido.") }
+    if (!dataNascimento) { return res.send(400).send("Falha ao cadastrar a cidade. O campo 'dataNascimento' não é válido.") }
 
-  try {
+    const entity = new Cliente();
+    entity.nomeCompleto = nomeCompleto;
+    entity.sexo = Sexo[sexo];
+    entity.setDataNascimento(DateTime.fromFormat(dataNascimento, 'dd/LL/yyyy').toJSDate());
+    entity.cidade = cidadeDoc._id;
+
     await clienteRepository.create(entity);
     res.status(200).send({ message: `Cliente ${entity.nomeCompleto} cadastrado(a) com suceso` });
   } catch (error) {
-    res.status(400).send({ errorMessage: error.message });
+    console.log(error);
+    res.status(500).send({ errorMessage: 'Occoreu um erro e não será possível prosseguir com a operação' });
   }
 }
 
 async function getClienteByNomeCompleto(req, res) {
-  const nome = req.query.nome;
   try {
-    const match = nome.replace(/_/gm, ' ')?.match(/(^[a-z_A-ZÀ-ž]{1,200}$)/)?.[1];
+    const match = formatters.validatedClienteNome(req.query.nome);
     if (!match) {
       return res.status(400).send({ errorMessage: "Requisição inválida no parâmetro 'nome'." });
     }
@@ -88,12 +110,13 @@ async function getClienteByNomeCompleto(req, res) {
       }
     }).limit(100).toArray());
   } catch (error) {
-    res.status(400).send({ errorMessage: error.message });
+    console.log(error);
+    res.status(500).send({ errorMessage: 'Occoreu um erro e não será possível prosseguir com a operação' });
   }
 }
 
 async function getClienteById(req, res) {
-  const id = req.query.id;
+  const id = formatters.validatedId(req.query.id);
   try {
     if (!id) {
       res.status(400).send({ errorMessage: "Requisição inválida no parâmetro 'id'." });
@@ -110,14 +133,15 @@ async function getClienteById(req, res) {
 
     res.status(200).send(result);
   } catch (error) {
-    res.status(400).send({ errorMessage: error.message });
+    console.log(error);
+    res.status(500).send({ errorMessage: 'Occoreu um erro e não será possível prosseguir com a operação' });
   }
 }
 
 async function removeCliente(req, res) {
-  const id = req.query.id;
   try {
-    if (!id) {
+    const id = req.query.id;
+    if (formatters.validatedId(id)) {
       res.status(400).send({ errorMessage: "Requisição inválida no parâmetro 'id'." });
       return;
     }
@@ -136,20 +160,21 @@ async function removeCliente(req, res) {
 
     res.status(result.code).send(result.message);
   } catch (error) {
-    res.status(400).send(error.message);
+    console.log(error);
+    res.status(500).send({ errorMessage: 'Occoreu um erro e não será possível prosseguir com a operação' });
   }
 }
 
 async function renameCliente(req, res) {
-  const id = req.query.id;
-  const novo_nome_completo = req.query.novo_nome_completo;
   try {
+    const id = formatters.validatedId(req.query.id);
     if (!id) {
       return res.status(400).send({ errorMessage: "Requisição inválida no parâmetro 'id'." });
     }
 
+    const novo_nome_completo = formatters.validatedClienteNome(req.query.novo_nome_completo);
     if (!novo_nome_completo) {
-      return res.status(400).send({ errorMessage: 'Requisição inválida no parâmetro "novo_nome_completo".' });
+      return res.status(400).send({ errorMessage: "Requisição inválida no parâmetro 'novo_nome_completo'." });
     }
 
     const result = await clienteRepository.updateOne({
@@ -160,8 +185,10 @@ async function renameCliente(req, res) {
 
     res.status(result.code).send({ message: result.message });
   } catch (error) {
-    res.status(400).send({ errorMessage: error.message });
+    console.log(error);
+    res.status(500).send({ errorMessage: 'Occoreu um erro e não será possível prosseguir com a operação' });
   }
 }
+
 
 module.exports = { clientController };
